--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="form-container">
       <form id="systems-form">
         <div class="input">
-          <input type="text" id="dez" placeholder="dez" />
+          <input type="text" id="dez" placeholder="dez" size="3"/>
         </div>
         <div class="input">
-          <input type="text" id="hex" placeholder="hex" />
+          <input type="text" id="hex" placeholder="hex" size="3"/>
         </div>
         <div class="input">
-          <input type="text" id="bin" placeholder="bin" />
+          <input type="text" id="bin" placeholder="bin" size="8"/>
         </div>
         <button type="submit" id="submit">prüfen</button>
       </form>
