--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
     <h1 id="exercise"></h1>
     <div class="form-container">
       <form id="systems-form">
-        <div class="input">
+        <div class="input dez">
           <input type="text" id="dez" placeholder="dez" size="3"/>
+          <span class="error" id="dezErr" hidden></span>
         </div>
-        <div class="input">
+        <div class="input hex">
           <input type="text" id="hex" placeholder="hex" size="3"/>
+          <span class="error" id="hexErr" hidden></span>
         </div>
-        <div class="input">
+        <div class="input bin">
           <input type="text" id="bin" placeholder="bin" size="8"/>
+          <span class="error" id="binErr" hidden></span>
+        </div>
+        <div id="falsch" hidden>
+          <h1 class="success falsch">Falsch!</h1>
         </div>
         <button class="button" type="submit" id="submit">prüfen</button>
       </form>
     </div>
     <div id="richtig" hidden>
       <h1 class="success richtig">Richtig!</h1>
-      <button class="button" onclick="location.reload()">weiter</button>
-    </div>
-    <div id="falsch" hidden>
-      <h1 class="success falsch">Falsch!</h1>
       <button class="button" onclick="location.reload()">weiter</button>
     </div>
   </div>
