--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="images/icons/favicon/favicon.ico" rel="icon" />
+    <link rel="manifest" href="manifest.json">
     <title>BinHexDezTraining</title>
   </head>
   <body>
