--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="images/icons/favicon/favicon.ico" rel="icon" />
     <link rel="manifest" href="manifest.json">
+		<link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico"
     <title>BinHexDezTraining</title>
   </head>
   <body>
